--- a/1/index.html
+++ b/1/index.html
@@ -1,1 +1,17 @@
-cc
+<table border="2">
+    <tr style="background-color: blue; color: red;">
+        <td>id</td>
+        <td>nom</td>
+        <td>prenom</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>dali</td>
+        <td>bellili</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>moutii</td>
+        <td>ben abdeda</td>
+    </tr>
+</table>
